<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sing Up"
            android:textSize="40dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/R_Et_nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="20dp"
            android:hint="@string/R_Et_nombre_usuario"
            android:inputType="text" />

        <EditText
            android:id="@+id/R_Et_correo"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/R_Et_correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/R_Et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/R_Et_contrasena"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/R_Et_confirmar_contrasena"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/R_Et_confirmar_contrasena"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/Btn_registrar"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/color_botones"
            android:padding="10dp"
            android:text="@string/Btn_registrar"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>